--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,7 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": [".js", ".ts"]
+        "extensions": [".ts"]
       }
     }
   }
