--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jdes/homebridge-tost-corp-somfy-rts-web",
   "description": "A Homebridge plugin to easily control your Somfy blinds using the TOST Corp box for Somfy RTS",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "repository": "https://github.com/jeandesravines/homebridge-tostcorp-somfy-rts-web.git",
   "license": "MIT",
   "author": "Jean Desravines <hi@jeandesravines.com>",
@@ -17,7 +17,10 @@
     "build": "tsc",
     "lint": "eslint --fix --ext .ts src",
     "prepare": "husky install",
-    "preversion": "npm run lint"
+    "preversion": "npm run lint",
+    "version": "git add -A .",
+    "postversion": "git push && git push --tags",
+    "prepublishOnly": "npm run build"
   },
   "engines": {
     "homebridge": ">=1.3.0"
