--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "outDir": "dist",
     "sourceMap": true,
+    "skipLibCheck": true,
     "strict": true,
     "target": "ESNext"
   },
