test(ApiClient): Improve unit testing coverage

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,5 +23,11 @@
         "extensions": [".ts"]
       }
     }
-  }
+  },
+  "overrides": [{
+    "files": [ "*.test.ts" ],
+    "rules": {
+      "@typescript-eslint/no-explicit-any": ["off"]
+    }
+  }]
 }
