--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   ],
   "scripts": {
     "build": "tsc",
-    "lint": "eslint --fix --ext .ts src",
+    "lint": "eslint --fix --ext .ts src tests",
     "prepare": "husky install",
     "preversion": "npm run lint",
     "version": "git add -A .",
     "postversion": "git push && git push --tags",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "jest"
   },
   "engines": {
     "homebridge": ">=1.3.0"
@@ -35,9 +36,10 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/jsdom": "^16.2.13",
     "@types/lodash": "^4.14.171",
-    "@types/node": "^16.3.2",
+    "@types/node": "^16.4.13",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "eslint": "^7.30.0",
@@ -46,9 +48,12 @@
     "eslint-plugin-prettier": "^3.4.0",
     "homebridge": "^1.3.4",
     "husky": "^7.0.1",
-    "lint-staged": "^11.1.1",
+    "jest": "^26.6.3",
+    "jest-extended": "^0.11.5",
+    "lint-staged": "^11.1.2",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.3.5"
   }
 }
