--- a/jest.config.json
+++ b/jest.config.json
@@ -1,8 +1,7 @@
 {
   "preset": "ts-jest",
-  "collectCoverageFrom": [
-    "src/**/*.ts"
-  ],
+  "collectCoverageFrom": ["src/**/*.ts"],
   "setupFilesAfterEnv": ["<rootDir>/tests/scripts/setup-after-env.ts"],
-  "silent": true
+  "silent": true,
+  "testRegex": "/tests/.*\\.test\\.[jt]s$"
 }
