--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tost-corp"
   ],
   "scripts": {
+    "prebuild": "rm -rf dist",
     "build": "tsc",
     "lint": "eslint --fix --ext .ts src tests",
     "prepare": "husky install",
@@ -36,7 +37,7 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.1",
     "@types/jsdom": "^16.2.13",
     "@types/lodash": "^4.14.171",
     "@types/node": "^16.4.13",
@@ -48,12 +49,12 @@
     "eslint-plugin-prettier": "^3.4.0",
     "homebridge": "^1.3.4",
     "husky": "^7.0.1",
-    "jest": "^26.6.3",
+    "jest": "^27.0.6",
     "jest-extended": "^0.11.5",
     "lint-staged": "^11.1.2",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
-    "ts-jest": "^26.5.6",
+    "ts-jest": "^27.0.4 ",
     "typescript": "^4.3.5"
   }
 }
