--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jdes/homebridge-tost-corp-somfy-rts-web",
   "description": "A Homebridge plugin to easily control your Somfy blinds using the TOST Corp box for Somfy RTS",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "repository": "https://github.com/jeandesravines/homebridge-tost-corp-somfy-rts-web.git",
   "license": "MIT",
   "author": "Jean Desravines <hi@jeandesravines.com>",
@@ -28,7 +28,8 @@
     "homebridge": ">=1.3.0"
   },
   "files": [
-    "dist/src/**/*"
+    "dist/src/**/*",
+    "config.schema.json"
   ],
   "dependencies": {
     "axios": "^0.24.0",
