--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cancelable-promise": "^4.2.1",
+    "homebridge": "^1.3.8",
     "jsdom": "^19.0.0",
     "lodash": "^4.17.21"
   },
@@ -52,7 +53,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
-    "homebridge": "^1.3.6",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "jest-extended": "^1.1.0",
@@ -64,8 +64,8 @@
   },
   "lint-staged": {
     "*.ts": [
-      "yarn lint",
-      "yarn test --bail --findRelatedTests"
+      "npm run lint",
+      "npm run test --bail --findRelatedTests"
     ]
   }
 }
