--- a/package.json
+++ b/package.json
@@ -38,34 +38,34 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cancelable-promise": "^4.2.1",
-    "jsdom": "^18.1.0",
+    "homebridge": "^1.3.8",
+    "jsdom": "^19.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "@types/jsdom": "^16.2.13",
     "@types/lodash": "^4.14.177",
-    "@types/node": "^16.11.9",
+    "@types/node": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
-    "homebridge": "^1.3.6",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "jest-extended": "^1.1.0",
     "lint-staged": "^12.1.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.3.2",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.5.2"
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.4"
   },
   "lint-staged": {
     "*.ts": [
-      "yarn lint",
-      "yarn test --bail --findRelatedTests"
+      "npm run lint",
+      "npm run test --bail --findRelatedTests"
     ]
   }
 }
