--- a/package.json
+++ b/package.json
@@ -32,31 +32,31 @@
     "homebridge": ">=1.3.0"
   },
   "files": [
-    "dist/src/**/*",
+    "dist/src",
     "config.schema.json"
   ],
   "dependencies": {
     "axios": "^0.24.0",
     "cancelable-promise": "^4.2.1",
-    "homebridge": "^1.3.8",
     "jsdom": "^19.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
-    "@types/jsdom": "^16.2.13",
+    "@types/jsdom": "^16.2.14",
     "@types/lodash": "^4.14.177",
-    "@types/node": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.3.0",
+    "@types/node": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "homebridge": "^1.3.9",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "jest-extended": "^1.1.0",
-    "lint-staged": "^12.1.1",
+    "lint-staged": "^12.1.4",
     "nodemon": "^2.0.15",
     "prettier": "^2.3.2",
     "ts-jest": "^27.1.2",
