--- a/.eslintrc
+++ b/.eslintrc
@@ -17,17 +17,12 @@
   "rules": {
     "prettier/prettier": ["error"]
   },
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [".ts"]
+  "overrides": [
+    {
+      "files": ["*.test.ts"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": ["off"]
       }
     }
-  },
-  "overrides": [{
-    "files": [ "*.test.ts" ],
-    "rules": {
-      "@typescript-eslint/no-explicit-any": ["off"]
-    }
-  }]
+  ]
 }
