--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
     "strict": true,
     "target": "ESNext"
   },
-  "include": ["src", "tests"]
+  "include": ["src", "tests"],
+  "files": ["@types/global.d.ts"]
 }
