fix(Device): Stop update interval on cancel

--- a/jest.config.json
+++ b/jest.config.json
@@ -5,7 +5,5 @@
   },
   "preset": "ts-jest",
   "setupFilesAfterEnv": ["jest-extended/all", "<rootDir>/tests/scripts/setup-after-env.ts"],
-  // "silent": true,
-  "testPathIgnorePatterns": ["/dist/", "/node_modules/"],
-  "testRegex": "/tests/.*\\.test\\.[jt]s$"
+  "testPathIgnorePatterns": ["/dist/", "/node_modules/"]
 }
