--- a/.eslintrc
+++ b/.eslintrc
@@ -19,9 +19,10 @@
   },
   "overrides": [
     {
-      "files": ["*.test.ts"],
+      "files": ["tests/**/*"],
       "rules": {
-        "@typescript-eslint/no-explicit-any": ["off"]
+        "@typescript-eslint/no-explicit-any": ["off"],
+        "@typescript-eslint/no-var-requires": ["off"]
       }
     }
   ]
