--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "build": "tsc",
     "lint": "eslint --fix --ext .ts src tests",
     "prepare": "husky install",
-    "preversion": "npm run lint",
+    "preversion": "yarn lint",
     "version": "git add -A .",
     "postversion": "git push && git push --tags",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "yarn build",
     "test": "jest"
   },
   "engines": {
@@ -36,36 +36,36 @@
     "config.schema.json"
   ],
   "dependencies": {
-    "axios": "^0.24.0",
-    "cancelable-promise": "^4.2.1",
+    "axios": "^0.27.2",
+    "cancelable-promise": "^4.3.0",
     "jsdom": "^19.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^28.1.1",
     "@types/jsdom": "^16.2.14",
-    "@types/lodash": "^4.14.177",
-    "@types/node": "^17.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.41",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "homebridge": "^1.3.9",
-    "husky": "^7.0.4",
-    "jest": "^27.3.1",
-    "jest-extended": "^1.1.0",
-    "lint-staged": "^12.1.5",
-    "nodemon": "^2.0.15",
-    "prettier": "^2.3.2",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "homebridge": "^1.4.1",
+    "husky": "^8.0.1",
+    "jest": "^28.1.1",
+    "jest-extended": "^2.0.0",
+    "lint-staged": "^13.0.1",
+    "nodemon": "^2.0.16",
+    "prettier": "^2.6.2",
+    "ts-jest": "^28.0.4",
+    "typescript": "^4.7.3"
   },
   "lint-staged": {
     "*.ts": [
-      "npm run lint",
-      "npm run test --bail --findRelatedTests"
+      "yarn lint",
+      "yarn test --bail --findRelatedTests"
     ]
   }
 }
