--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jdes/homebridge-tost-corp-somfy-rts-web",
   "description": "A Homebridge plugin to easily control your Somfy blinds using the TOST Corp box for Somfy RTS",
-  "version": "1.1.3",
+  "version": "1.1.4-beta.0",
   "repository": "https://github.com/jeandesravines/homebridge-tost-corp-somfy-rts-web.git",
   "license": "MIT",
   "author": "Jean Desravines <hi@jeandesravines.com>",
@@ -29,7 +29,8 @@
     "test": "jest"
   },
   "engines": {
-    "homebridge": ">=1.3.0"
+    "homebridge": ">= 1.3.0",
+    "node": ">= 14"
   },
   "files": [
     "dist/src",
@@ -44,7 +45,7 @@
     "@types/jest": "^28.1.1",
     "@types/jsdom": "^16.2.14",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.41",
+    "@types/node": "^17.0.42",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
