--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test": "jest"
   },
   "engines": {
-    "homebridge": ">=1.3.0"
+    "homebridge": ">= 1.3.0",
+    "node": ">= 14"
   },
   "files": [
     "dist/src",
