feat(Device): use durationDelta

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,7 +1,7 @@
 {
   "collectCoverageFrom": ["src/**/*.ts"],
   "fakeTimers": {
-    "doNotFake": ["nextTick"]
+    "enableGlobally": true
   },
   "preset": "ts-jest",
   "setupFilesAfterEnv": ["jest-extended/all", "<rootDir>/jest.setup.ts"],
