--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jdes/homebridge-tost-corp-somfy-rts-web",
   "description": "A Homebridge plugin to easily control your Somfy blinds using the TOST Corp box for Somfy RTS",
-  "version": "1.1.8",
+  "version": "2.0.0",
   "repository": "https://github.com/jeandesravines/homebridge-tost-corp-somfy-rts-web.git",
   "license": "MIT",
   "author": "Jean Desravines <hi@jeandesravines.com>",
@@ -34,31 +34,29 @@
     "config.schema.json"
   ],
   "dependencies": {
-    "axios": "^0.27.2",
-    "cancelable-promise": "^4.3.0",
-    "jsdom": "^20.0.0",
-    "lodash": "^4.17.21"
+    "cancelable-promise": "^4.3.1",
+    "lodash": "^4.17.21",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.6",
-    "@types/jsdom": "^20.0.0",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^18.6.1",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@types/jest": "^29.2.5",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "homebridge": "^1.5.0",
-    "husky": "^8.0.1",
-    "jest": "^28.1.3",
-    "jest-extended": "^3.0.1",
-    "lint-staged": "^13.0.3",
-    "nodemon": "^2.0.19",
-    "prettier": "^2.7.1",
-    "ts-jest": "^28.0.7",
-    "typescript": "^4.7.4"
+    "homebridge": "^1.6.0",
+    "husky": "^8.0.3",
+    "jest": "^29.3.1",
+    "jest-extended": "^3.2.1",
+    "lint-staged": "^13.1.0",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.4"
   },
   "lint-staged": {
     "*.ts": [
