--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jdes/homebridge-tost-corp-somfy-rts-web",
   "description": "A Homebridge plugin to easily control your Somfy blinds using the TOST Corp box for Somfy RTS",
-  "version": "2.0.0",
+  "version": "2.0.0-beta.0",
   "repository": "https://github.com/jeandesravines/homebridge-tost-corp-somfy-rts-web.git",
   "license": "MIT",
   "author": "Jean Desravines <hi@jeandesravines.com>",
@@ -35,8 +35,7 @@
   ],
   "dependencies": {
     "cancelable-promise": "^4.3.1",
-    "lodash": "^4.17.21",
-    "node-fetch": "^3.3.0"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/jest": "^29.2.5",
