--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jdes/homebridge-tost-corp-somfy-rts-web",
   "description": "A Homebridge plugin to easily control your Somfy blinds using the TOST Corp box for Somfy RTS",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "repository": "https://github.com/jeandesravines/homebridge-tost-corp-somfy-rts-web.git",
   "license": "MIT",
   "author": "Jean Desravines <hi@jeandesravines.com>",
@@ -38,23 +38,23 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.5",
+    "@types/jest": "^29.2.6",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "eslint": "^8.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "homebridge": "^1.6.0",
     "husky": "^8.0.3",
     "jest": "^29.3.1",
-    "jest-extended": "^3.2.1",
+    "jest-extended": "^3.2.3",
     "lint-staged": "^13.1.0",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.1",
-    "ts-jest": "^29.0.3",
+    "prettier": "^2.8.3",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   },
   "lint-staged": {
