chore(package): Update package.json

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "somfy",
     "tost-corp"
   ],
-  "funding": {
-    "type": "paypal",
-    "url": "https://paypal.me/jeandesravines0"
-  },
+  "funding": [
+    "https://revolut.me/jeandesravines",
+    "https://paypal.me/jeandesravines0"
+  ],
   "scripts": {
     "prebuild": "rm -rf dist",
     "build": "tsc",
