--- a/package.json
+++ b/package.json
@@ -35,27 +35,28 @@
   ],
   "dependencies": {
     "cancelable-promise": "^4.3.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.6",
+    "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "eslint": "^8.32.0",
+    "@types/node": "^18.14.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "homebridge": "^1.6.0",
     "husky": "^8.0.3",
-    "jest": "^29.3.1",
-    "jest-extended": "^3.2.3",
-    "lint-staged": "^13.1.0",
+    "jest": "^29.4.3",
+    "jest-extended": "^3.2.4",
+    "lint-staged": "^13.1.2",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "*.ts": [
