--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jdes/homebridge-tost-corp-somfy-rts-web",
   "description": "A Homebridge plugin to easily control your Somfy blinds using the TOST Corp box for Somfy RTS",
-  "version": "2.0.0",
+  "version": "2.2.0",
   "repository": "https://github.com/jeandesravines/homebridge-tost-corp-somfy-rts-web.git",
   "license": "MIT",
   "author": "Jean Desravines <hi@jeandesravines.com>",
@@ -35,27 +35,29 @@
   ],
   "dependencies": {
     "cancelable-promise": "^4.3.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "node-fetch": "^2"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.6",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.3.1",
+    "@types/node-fetch": "^2.6.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "homebridge": "^1.6.0",
+    "homebridge": "^1.6.1",
     "husky": "^8.0.3",
-    "jest": "^29.3.1",
-    "jest-extended": "^3.2.3",
-    "lint-staged": "^13.1.0",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.3",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4"
+    "jest": "^29.5.0",
+    "jest-extended": "^4.0.0",
+    "lint-staged": "^13.2.2",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.1.3"
   },
   "lint-staged": {
     "*.ts": [
